@@ -1,3 +1,7 @@
+2010-05-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Support C0 code.
+
 2010-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* commands/parttool.c (grub_cmd_parttool): Fix #if !GRUB_NO_MODULES
